be/src/exec/hdfs-scan-node.h
@@ -493,8 +493,14 @@ class HdfsScanNode : public ScanNode {
   /// profile.
   bool counters_running_;
 
-  /// The id of the callback added to the query resource manager when RM is enabled. Used
-  /// to remove the callback before this scan node is destroyed.
+  /// The id of the callback added to the thread resource manager when thread token
+  /// is available. Used to remove the callback before this scan node is destroyed.
+  /// -1 if no callback is registered.
+  int thread_avail_cb_id_;
+
+  /// The id of the callback added to the query resource manager when RM is enabled.
+  /// Used to remove the callback before this scan node is destroyed.
+  /// -1 if no callback is registered.
   int32_t rm_callback_id_;
 
   /// Called when scanner threads are available for this scan node. This will
