be/src/runtime/thread-resource-mgr.cc
@@ -49,7 +49,9 @@ ThreadResourceMgr::ResourcePool::ResourcePool(ThreadResourceMgr* parent)
 void ThreadResourceMgr::ResourcePool::Reset() {
   num_threads_ = 0;
   num_reserved_optional_threads_ = 0;
-  thread_available_fn_ = NULL;
+  thread_callbacks_.clear();
+  num_callbacks_ = 0;
+  next_callback_idx_ = 0;
   max_quota_ = INT_MAX;
 }
 
@@ -80,6 +82,7 @@ ThreadResourceMgr::ResourcePool* ThreadResourceMgr::RegisterPool() {
 
 void ThreadResourceMgr::UnregisterPool(ResourcePool* pool) {
   DCHECK(pool != NULL);
+  DCHECK_EQ(pool->num_callbacks_, 0);
   unique_lock<mutex> l(lock_);
   DCHECK(pools_.find(pool) != pools_.end());
   pools_.erase(pool);
@@ -87,22 +90,54 @@ void ThreadResourceMgr::UnregisterPool(ResourcePool* pool) {
   UpdatePoolQuotas();
 }
 
-void ThreadResourceMgr::ResourcePool::SetThreadAvailableCb(ThreadAvailableCb fn) {
+int ThreadResourceMgr::ResourcePool::AddThreadAvailableCb(ThreadAvailableCb fn) {
   unique_lock<mutex> l(lock_);
-  DCHECK(thread_available_fn_ == NULL || fn == NULL);
-  thread_available_fn_ = fn;
+  // The id is unique for each callback and is monotonically increasing.
+  int id = thread_callbacks_.size();
+  thread_callbacks_.push_back(fn);
+  ++num_callbacks_;
+  return id;
+}
+
+void ThreadResourceMgr::ResourcePool::RemoveThreadAvailableCb(int id) {
+  unique_lock<mutex> l(lock_);
+  DCHECK(thread_callbacks_[id] != NULL);
+  DCHECK_GT(num_callbacks_, 0);
+  thread_callbacks_[id] = NULL;
+  --num_callbacks_;
+}
+
+void ThreadResourceMgr::ResourcePool::InvokeCallbacks() {
+  // We need to grab a lock before issuing the callbacks to prevent the
+  // them from being removed while it is happening.
+  // Note: this is unlikely to be a big deal for performance currently
+  // since this is only called with any frequency on (1) the scanner thread
+  // completion path and (2) pool unregistration.
+  if (num_available_threads() > 0 && num_callbacks_ > 0) {
+    int num_invoked = 0;
+    unique_lock<mutex> l(lock_);
+    while (num_available_threads() > 0 && num_invoked < num_callbacks_) {
+      DCHECK_LT(next_callback_idx_, thread_callbacks_.size());
+      ThreadAvailableCb fn = thread_callbacks_[next_callback_idx_];
+      if (LIKELY(fn != NULL)) {
+        ++num_invoked;
+        fn(this);
+      }
+      ++next_callback_idx_;
+      if (next_callback_idx_ == thread_callbacks_.size()) next_callback_idx_ = 0;
+    }
+  }
 }
 
 void ThreadResourceMgr::UpdatePoolQuotas(ResourcePool* new_pool) {
   if (pools_.empty()) return;
   per_pool_quota_ =
       ceil(static_cast<double>(system_threads_quota_) / pools_.size());
-  for (Pools::iterator it = pools_.begin(); it != pools_.end(); ++it) {
-    ResourcePool* pool = *it;
-    if (pool == new_pool) continue;
-    unique_lock<mutex> l(pool->lock_);
-    if (pool->num_available_threads() > 0 && pool->thread_available_fn_ != NULL) {
-      pool->thread_available_fn_(pool);
+  // Only invoke callbacks on pool unregistration.
+  if (new_pool == NULL) {
+    for (Pools::iterator it = pools_.begin(); it != pools_.end(); ++it) {
+      ResourcePool* pool = *it;
+      pool->InvokeCallbacks();
     }
   }
 }
